--- a/client/src/components/master.css
+++ b/client/src/components/master.css
@@ -14,7 +14,6 @@
 
 .head-wrap{
     display: block;
-    width: 99%;
     margin-right: auto;
     margin-left: auto;
 }
@@ -23,6 +22,7 @@
     padding-bottom: 15%;
     padding-right: 40%;
     background-repeat: no-repeat;
+    min-width: 90%;
     margin: auto;
     font-size: 50px;
     color: floralwhite;
@@ -65,4 +65,26 @@
     color: floralwhite;
     text-align: right;
     padding: 5%
+}
+
+.user-wrap2{
+    display: block;
+    background-color:rgb(34, 34, 34) ;
+    padding-bottom: 30%;
+    color: floralwhite;
+}
+.profile-head{
+    display: flex;
+    justify-content: space-around;
+    padding-top: 3%;
+}
+
+.user-info{
+    margin-top: 3%;
+    margin-bottom: 3%;
+    padding: 3%;
+    border: solid floralwhite 1px;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
 }
