--- a/client/src/components/master.css
+++ b/client/src/components/master.css
@@ -17,13 +17,19 @@
     margin-right: auto;
     margin-left: auto;
 }
+
+@media screen and (min-width: 480px) {
+        .main-header {
+            width: 100%;
+        }
+    }
+
 .main-header{
-    padding-top: 2%;
-    padding-bottom: 15%;
-    padding-right: 40%;
-    background-repeat: no-repeat;
-    min-width: 90%;
-    margin: auto;
+    position: absolute;
+    top: 1px;
+    left: 8px;
+    padding-right: 30%;
+    background-repeat:no-repeat;
     font-size: 50px;
     color: floralwhite;
 }
